--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,9 +133,9 @@ jobs:
         go-version: ${{ env.GO_VERSION }}
 
     - name: Run Gosec Security Scanner
-      run: |
-        go install github.com/securecodewarrior/gosec/cmd/gosec@latest
-        gosec ./...
+      uses: securecodewarrior/github-action-gosec@master
+      with:
+        args: ./...
 
     - name: Run Nancy vulnerability scanner
       run: |
