--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,8 +11,18 @@ access_key_id: "${S3_ACCESS_KEY_ID}"
 secret_key: "${S3_SECRET_KEY}"
 
 # Encryption configuration
+# Choose between "tink" (envelope encryption) or "aes256-gcm" (direct encryption)
+encryption_type: "tink"
+
+# Tink (envelope encryption) configuration
 kek_uri: "gcp-kms://projects/your-project/locations/global/keyRings/your-ring/cryptoKeys/your-key"
 credentials_path: "/path/to/service-account.json"
+
+# AES-256-GCM (direct encryption) configuration
+# Generate a key with: openssl rand -base64 32
+# aes_key: "your-base64-encoded-256-bit-key-here"
+
+# General encryption settings
 algorithm: "AES256_GCM"
 key_rotation_days: 90
 metadata_key_prefix: "x-s3ep-"
