--- a/.golangci.yml
+++ b/.golangci.yml
@@ -15,3 +15,19 @@ linters:
     - staticcheck
     - typecheck
     - unused
+    - revive
+    - dupl
+    - unconvert
+    - prealloc
+    - goconst
+    - gocyclo
+
+linters-settings:
+  gocyclo:
+    min-complexity: 15
+  revive:
+    rules:
+      - name: package-comments
+        disabled: true
+      - name: exported
+        disabled: true
