--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
   test:
     name: Unit Tests
     runs-on: ubuntu-latest
+    outputs:
+      coverage: ${{ steps.coverage.outputs.percentage }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,6 +39,22 @@ jobs:
 
       - name: Run tests
         run: make test-unit
+
+      - name: Generate coverage report
+        run: make coverage-ci
+
+      - name: Extract coverage percentage
+        id: coverage
+        run: |
+          COVERAGE=$(grep "total:" coverage/coverage.txt | awk '{print $3}' | sed 's/%//')
+          echo "percentage=$COVERAGE" >> $GITHUB_OUTPUT
+          echo "Coverage: $COVERAGE%"
+
+      - name: Upload coverage artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
 
   security:
     name: Security Scan
@@ -99,6 +117,20 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: Download coverage artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage/
+
+      - name: Set up Go (for building binaries)
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Build binaries for release
+        run: make build-all
+
       - name: Install dependencies
         run: npm clean-install
 
@@ -107,7 +139,8 @@ jobs:
 
       - name: Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.USER_PAT }}
+          TEST_COVERAGE: ${{ needs.test.outputs.coverage }}
         run: npx semantic-release
 
 env:
