--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,6 +117,12 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: Install dependencies
+        run: npm clean-install
+        
+      - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
+        run: npm audit signatures
+
       - name: Download coverage artifacts
         uses: actions/download-artifact@v4
         with:
