--- a/config/config-tls.yaml
+++ b/config/config-tls.yaml
@@ -17,7 +17,7 @@ access_key_id: "${S3_ACCESS_KEY_ID}"
 secret_key: "${S3_SECRET_KEY}"
 
 # Encryption configuration
-# Choose between "tink" (envelope encryption) or "aes256-gcm" (direct encryption)
+# Choose between "tink" (envelope encryption) or "aes-gcm" (direct encryption)
 encryption_type: "tink"
 
 # Tink (envelope encryption) configuration
