--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -22,7 +22,7 @@ permissions:
 
 jobs:
   renovate:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v4
