--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,10 +99,50 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
           make lint
 
+  integration-tests:
+    name: Integration Tests
+    runs-on: self-hosted
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+
+      - name: Cache Go modules
+        uses: actions/cache@v4
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
+      - name: Install dependencies
+        run: go mod download
+
+      - name: Start MinIO for testing
+        run: docker-compose up -d minio
+
+      - name: Wait for MinIO to be ready
+        run: |
+          timeout 60s bash -c 'until curl -f http://localhost:9000/minio/health/live; do sleep 2; done'
+
+      - name: Run integration tests
+        run: make test-integration
+        env:
+          INTEGRATION_TESTS: true
+          S3_ENDPOINT: http://localhost:9000
+
+      - name: Cleanup test infrastructure
+        if: always()
+        run: docker-compose down -v
+
   semantic-release:
     name: Semantic Release
     runs-on: self-hosted
-    needs: [test, security]
+    needs: [test, security, integration-tests]
     permissions:
       contents: write
       issues: write
