chore: renovate config fix

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -34,3 +34,5 @@ jobs:
           configurationFile: renovate.json
         env:
           LOG_LEVEL: ${{ inputs.logLevel || 'info' }}
+          RENOVATE_AUTODISCOVER: 'true'
+          RENOVATE_AUTODISCOVER_FILTER: 'guided-traffic/s3-encryption-proxy'
