chore: renovate config fix

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -36,3 +36,4 @@ jobs:
           LOG_LEVEL: ${{ inputs.logLevel || 'info' }}
           RENOVATE_AUTODISCOVER: 'true'
           RENOVATE_AUTODISCOVER_FILTER: 'guided-traffic/s3-encryption-proxy'
+          RENOVATE_REQUIRE_CONFIG: 'required'
