ci: suppress AWS SDK v1 deprecation warnings temporarily
The golangci-lint tool now treats AWS SDK v1 deprecation warnings as errors.
This change temporarily suppresses the SA1019 deprecation check to allow
the renovate/aws-sdk-go-monorepo branch to pass CI checks.

AWS SDK v1 is deprecated and should be migrated to v2 in the future.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,3 +31,7 @@ linters-settings:
         disabled: true
       - name: exported
         disabled: true
+  staticcheck:
+    # Temporarily suppress deprecation warnings for AWS SDK v1
+    # TODO: Migrate to AWS SDK v2 to resolve these warnings permanently
+    checks: ["all", "-SA1019"]
