fix: renovate pipeline

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -3,6 +3,10 @@ on:
   # Täglich um 2 Uhr morgens UTC ausführen
   schedule:
     - cron: '0 2 * * *'
+  # Nach jedem Push auf main
+  push:
+    branches:
+      - main
   # Manueller Trigger
   workflow_dispatch:
     inputs:
