--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
     ":automergeDigest",
     ":automergeBranch"
   ],
+  "schedule": ["at any time"],
   "timezone": "Europe/Berlin",
   "labels": [
     "dependencies"
@@ -18,10 +19,10 @@
   "reviewers": [
     "hans-fischer"
   ],
-  "prHourlyLimit": 2,
-  "prConcurrentLimit": 5,
-  "branchConcurrentLimit": 10,
-  "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
+  "prHourlyLimit": 10,
+  "prConcurrentLimit": 2,
+  "branchConcurrentLimit": 2,
+  "gitAuthor": "Renovate Bot <mail@guided-traffic.com>",
   "forkProcessing": "disabled",
   "packageRules": [
     {
@@ -32,7 +33,7 @@
       "matchUpdateTypes": [
         "patch"
       ],
-      "automerge": false,
+      "automerge": true,
       "automergeType": "pr"
     },
     {
