--- a/config/demo.yaml
+++ b/config/demo.yaml
@@ -1,10 +1,10 @@
 ---
 # Server configuration
 bind_address: "0.0.0.0:8080"
-log_level: "info"
+log_level: "debug"
 
 # S3 backend configuration
-target_endpoint: "http://minio:9000"
+target_endpoint: "https://minio:9000"
 region: "us-east-1"
 access_key_id: "minioadmin"
 secret_key: "minioadmin"
@@ -22,9 +22,9 @@ encryption:
       config:
         # Generate a demo key (do NOT use in production!)
         aes_key: "XZmcGLpObUuGV8CFOmfLKs7rggrX2TwIk5/Lbt9Azl4="
-        
+
     # Legacy provider for backward compatibility (can read old files)
-    - alias: "aes-legacy"  
+    - alias: "aes-legacy"
       type: "aes-gcm"
       description: "Legacy AES-256-GCM for backward compatibility"
       config:
