--- a/config/demo.yaml
+++ b/config/demo.yaml
@@ -7,7 +7,7 @@ log_level: "debug"
 target_endpoint: "https://minio:9000"
 region: "us-east-1"
 access_key_id: "minioadmin"
-secret_key: "minioadmin"
+secret_key: "minioadmin123"
 
 # Multi-Provider Encryption Configuration
 encryption:
