--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -1,28 +1,29 @@
 version: '3.8'
 
 services:
-  # MinIO S3-kompatible Object Storage
+  # MinIO S3-kompatible Object Storage mit HTTPS
   minio:
     image: minio/minio:latest
     container_name: demo-minio
     ports:
-      - "9000:9000"     # S3 API
-      - "9001:9001"     # MinIO Console
+      - "9000:9000"     # S3 API (HTTPS)
+      - "9001:9001"     # MinIO Console (HTTPS)
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin123
-    command: server /data --console-address ":9001"
+    command: server /data --console-address ":9001" --certs-dir /certs
     volumes:
       - minio_data:/data
+      - ./certs:/certs:ro
     networks:
       - s3-demo
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      test: ["CMD", "curl", "-f", "-k", "https://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
       retries: 3
 
-  # S3 Encryption Proxy
+  # S3 Encryption Proxy mit AES-CTR
   s3-encryption-proxy:
     build:
       context: .
@@ -56,14 +57,15 @@ services:
       SECRET_ACCESS_KEY: "minioadmin123"
       ENDPOINT: "minio:9000"
       REGION: "us-east-1"
-      USE_SSL: "false"
+      USE_SSL: "true"
+      SKIP_SSL_VERIFICATION: "true"
     depends_on:
       minio:
         condition: service_healthy
     networks:
       - s3-demo
 
-  # S3 Explorer - Über Encryption Proxy (verschlüsselt)
+  # S3 Explorer - Über Encryption Proxy (AES-CTR verschlüsselt)
   s3-explorer-encrypted:
     image: mastertinner/s3manager:latest
     container_name: demo-s3-explorer-encrypted
