--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -28,6 +28,10 @@ services:
     build:
       context: .
       dockerfile: Containerfile
+      args:
+        BUILD_NUMBER: "demo-dev"
+        GIT_COMMIT: "feature/multipart-upload-streaming"
+        BUILD_TIME: "auto"
     container_name: demo-s3-encryption-proxy
     ports:
       - "8080:8080"
