--- a/docker-compose.demo.yml
+++ b/docker-compose.demo.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MinIO S3-kompatible Object Storage mit HTTPS
   minio:
@@ -14,14 +12,14 @@ services:
     command: server /data --console-address ":9001" --certs-dir /certs
     volumes:
       - minio_data:/data
-      - ./certs:/certs:ro
+      - ./test/ssl-setup:/certs:ro
     networks:
       - s3-demo
     healthcheck:
       test: ["CMD", "curl", "-f", "-k", "https://localhost:9000/minio/health/live"]
       interval: 30s
       timeout: 20s
-      retries: 3
+      retries: 1
 
   # S3 Encryption Proxy mit AES-CTR
   s3-encryption-proxy:
@@ -53,6 +51,7 @@ services:
   # S3 Explorer - Direkt an MinIO (unverschlüsselt)
   s3-explorer-direct:
     image: mastertinner/s3manager:latest
+    platform: linux/amd64
     container_name: demo-s3-explorer-direct
     ports:
       - "8081:8080"
@@ -68,10 +67,12 @@ services:
         condition: service_healthy
     networks:
       - s3-demo
+    restart: unless-stopped
 
   # S3 Explorer - Über Encryption Proxy (AES-CTR verschlüsselt)
   s3-explorer-encrypted:
     image: mastertinner/s3manager:latest
+    platform: linux/amd64
     container_name: demo-s3-explorer-encrypted
     ports:
       - "8082:8080"
@@ -85,6 +86,7 @@ services:
       - s3-encryption-proxy
     networks:
       - s3-demo
+    restart: unless-stopped
 
 volumes:
   minio_data:
