--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,7 @@
 # Server configuration
 bind_address: "0.0.0.0:8080"
 log_level: "info"
+# log_health_requests: false  # Optional: disable health endpoint logging (default: false)
 
 # TLS configuration (optional)
 tls:
