--- a/config/demo.yaml
+++ b/config/demo.yaml
@@ -2,6 +2,7 @@
 # Server configuration
 bind_address: "0.0.0.0:8080"
 log_level: "debug"
+log_health_requests: false  # Disable health endpoint logging by default
 
 # S3 backend configuration
 target_endpoint: "https://minio:9000"
